--- a/projects/akita-ng-fire/package.json
+++ b/projects/akita-ng-fire/package.json
@@ -1,13 +1,13 @@
 {
   "name": "akita-ng-fire",
-  "version": "6.0.5",
+  "version": "6.0.5-compat",
   "peerDependencies": {
     "@angular/common": ">=9.0.0 <13",
     "@angular/core": ">=9.0.0 <13",
     "@angular/router": ">=9.0.0 <13",
     "@angular/fire": ">=6.0.4",
     "@datorama/akita": ">= 6.0.0",
-    "firebase": ">= 8 <9",
+    "firebase": ">= 8",
     "typescript": ">= 4.0.0"
   },
   "author": "GrandSchtroumpf",
